cmake_minimum_required(VERSION 3.15)
project(NeapuEngine CXX)
include_directories(Public GameObject Scene)
file(GLOB_RECURSE SRC_FILES "*.cpp")
file(GLOB_RECURSE HEAD_FILES "*.h")
if (CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_compile_definitions(NEAPU_ENGINE_EXPORTS)
endif ()
set(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include/neapuengine)
add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
message("install to " ${CMAKE_INSTALL_PREFIX})